[package]
name = "lunaro_plus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord-sdk = "0.3.0"
screenshots = "0.4.3"
image = "0.24.3"
rgb = "0.8.33"
leptess = "0.13.2"
substring = "1.4.5"
inputbot = "0.5"
palette = "0.6.1"